<resources>
    <string name="app_name">RateIt</string>
    <string name="action_settings">Settings</string>
    <string name="atividade_series">Séries</string>
    <string name="atividade_filmes">Filmes</string>
    <string name="atividade_categorias">Categorias</string>
    <string name="adicionar_filme">Adicionar Filme</string>
    <string name="adicionar_categoria">Adicionar Categoria</string>
    <string name="editar_filmes">Editar Filmes</string>
    <string name="editar_categorias">Editar Categorias</string>
    <string name="apagar_filme">Eliminar Filme</string>
    <string name="apagar_serie">Eliminar Série</string>
    <string name="apagar_categoria">Eliminar Categoria</string>
    <string name="editar_serie">Editar Série</string>
    <string name="adicionar_serie">Adicionar Série</string>
    <string name="addcategoria">Inserir Categoria</string>
    <string name="addfilme">Inserir Filme</string>
    <string name="addserie">Inserir Série</string>
    <string name="delfilme">Eliminar Filme</string>
    <string name="delcategoria">Eliminar Categoria</string>
    <string name="savefilme">Guardar Filme</string>
    <string name="savecategoria">Guardar Categoria</string>
    <string name="delserie">Eliminar Série</string>
    <string name="saveserie">Guardar Série</string>
    <string name="cancel">Cancelar</string>
    <string name="finish">Cancelado</string>
    <string name="nome_obrigatoria">Nenhum nome introduzido!</string>
    <string name="characters">Não é possível introduzir caracteres especiais!</string>
    <string name="serie_atualizada">Série atualizado com sucesso</string>
    <string name="serie_adicionada">Série Adicionada</string>
    <string name="filme_atualizado">Filme atualizado com sucesso!</string>
    <string name="filme_adicionado">Filme Adicionado</string>
    <string name="categoria_atualizado">Categoria atualizada com sucesso!</string>
    <string name="categoria_adicionado">Categoria Adicionada</string>
    <string name="filme_eliminado">Filme apagado com sucesso!</string>
    <string name="serie_eliminado">Série apagado com sucesso</string>
    <string name="categoria_eliminado">Categoria apagada com sucesso</string>
    <string name="ver_filmes">Ver Filmes</string>
    <string name="ver_categorias">Ver Categorias</string>
    <string name="ver_series">Ver Séries</string>
    <string name="nome_filme">Nome do Filme</string>
    <string name="nome_serie">Nome da Série</string>
    <string name="nome_categoria">Nome da Categoria</string>
    <string name="data_de_visualização">Data de Visualização</string>
    <string name="errospinner">Selecione um item</string>
    <string name="inserir">Inserir</string>
    <string name="alterar">Alterar</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_activity_add_filme">Adicionar Filme</string>
    <string name="title_activity_add_serie">Adicionar Serie</string>
    <string name="title_activity_add_categoria">Adicionar Categoria</string>
    <string name="title_activity_edit_filme">Editar Filme</string>
    <string name="title_activity_edit_serie">Editar Serie</string>
    <string name="title_activity_edit_categoria">Editar Categoria</string>
    <string name="title_activity_del_filme">Apagar Filme</string>
    <string name="title_activity_del_serie">Apagar Serie</string>
    <string name="title_activity_del_categoria">Apagar Categoria</string>
    <string name="title_activity_main_filmes">Filmes</string>
    <string name="title_activity_main_series">Series</string>
    <string name="title_activity_main_categorias">Categorias</string>
    <string name="title_activity_main_activity">MainActivity</string>
    <string name="title_activity_lista_filmes">ListaFilmes</string>
    <string name="nome">Nome</string>
    <string name="nota">Nota</string>
    <string name="categoria">Categoria</string>
    <string name="data">Data</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="erro_guardar_filme">Erro: Não foi possível guardar o filme</string>
    <string name="erro_guardar_serie">Erro: Não foi possível guardar o série</string>
    <string name="preecha_nome">Preencha o nome</string>
    <string name="nome_dos_filmes">Nome dos Filmes:</string>
    <string name="todas_as_categorias">All categories:</string>
    <string name="Erro">Erro</string>
    <string name="formato_data">dd/mm/yyyy</string>
    <string name="temporada">Temporada</string>
    <string name="episodio">Episódio</string>

    <string-array name="categorias">
        <item>Ação</item>
        <item>Aventura</item>
        <item>Biográfico</item>
        <item>Comédia</item>
        <item>Drama</item>
        <item>Ficção</item>
        <item>Romance</item>
        <item>Terror</item>
    </string-array>

    <string-array name="notas">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="dia">
        <item> dd </item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="mes">
        <item> mm </item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="ano">
        <item>aaaa</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>

</resources>
