<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFilmes">

    <Button
        android:id="@+id/buttonAddFilme"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:layout_marginBottom="51dp"
        android:text="@string/adicionar_filme"
        android:onClick="AddFilmeActivity"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditFilme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEditFilme"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="50dp"
        android:text="@string/editar_filmes"
        android:onClick="EditFilmeActivity"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelFilme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddFilme" />

    <Button
        android:id="@+id/buttonDelFilme"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="50dp"
        android:text="@string/apagar_filme"
        android:onClick="DelFilmeActivity"
        app:layout_constraintBottom_toTopOf="@+id/buttonListaFilmes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditFilme" />

    <Button
        android:id="@+id/buttonListaFilmes"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="155dp"
        android:layout_marginRight="155dp"
        android:layout_marginBottom="250dp"
        android:text="@string/ver_filmes"
        android:onClick="ListaFilmeActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelFilme" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFilmes"
        android:layout_width="395dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>